# ambi-rs

./: .env  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: ci.yml
migrations/2022-06-29-015123_create_readings/: down.sql  up.sql
scripts/: create-git-hooks  hooks-wrapper
scripts/git/: pre-commit
src/: controller.rs  db.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs
static/: htmx.html  index.html  script.js
