[package]
name = "ambi-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.147"
diesel = { version = "1.4.8", features = ["postgres"] }
env_logger = "0.10.0"
log = "0.4.17"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_postgres_pool"]