[package]
name = "ambi-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3"
axum = { version = "0.6", features = ["tokio", "headers"]}
axum-macros = "0.3"
deadpool-diesel = { version = "0.4.1", features = ["postgres"] }
diesel = { version = "2", features = ["postgres"] }
diesel_migrations = "2"
futures = "0.3"
futures-util = "0.3"
headers = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

env_logger = "0.10.0"
log = "0.4.17"